--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -15,3 +15,11 @@ main {
 	position: absolute;
 	top: 50px;
 }
+
+#article-status {
+	background-color: #CCC;
+	bottom: 0;
+	left: 0;
+	position: fixed;
+	width: 100%;
+}
