--- a/src/components/TopMenu.scss
+++ b/src/components/TopMenu.scss
@@ -1,7 +1,9 @@
 nav#top-menu {
   background-image: linear-gradient(-45deg,#ac32e4,#7918f2,#4801ff);
+  box-sizing: border-box;
   color: white;
   height: 50px;
+  padding-left: 20em;
   position: fixed;
   top: 0;
   width: 100%;
